--- a/src/shared/ui-kit/Button/Button.module.scss
+++ b/src/shared/ui-kit/Button/Button.module.scss
@@ -1,19 +1,17 @@
-@import '@common/variables.scss';
-
 .button {
   display: flex;
   justify-content: center;
   align-items: center;
   width: 100%;
   height: 36px;
-  padding: 10px $m;
+  padding: 10px var(--m);
   font-weight: 600;
   font-size: 14px;
   line-height: normal;
   font-family: inherit;
   color: var(--base-white);
   border: none;
-  border-radius: $xxs;
+  border-radius: var(--xxs);
   cursor: pointer;
 
   &[data-disabled='true'] {
@@ -25,10 +23,10 @@
 
     &.icon {
       justify-content: center;
-      width: $xxl;
-      height: $xxl;
-      padding: $lg;
-      border-radius: $xxs;
+      width: var(--xxl);
+      height: var(--xxl);
+      padding: var(--lg);
+      border-radius: var(--xxs);
 
       svg {
         width: 24px;
