--- a/src/features/acceptOffer/components/AcceptOfferButtons/AcceptOfferButtons.module.scss
+++ b/src/features/acceptOffer/components/AcceptOfferButtons/AcceptOfferButtons.module.scss
@@ -1,4 +1,3 @@
-@import '@common/variables.scss';
 @import '@common/typo.scss';
 @import '@common/breakpoints.scss';
 
@@ -8,23 +7,23 @@
   align-items: flex-start;
   width: 100%;
   background: var(--base-white);
-  gap: $m;
-  border-bottom-right-radius: $s;
-  border-bottom-left-radius: $s;
+  gap: var(--m);
+  border-bottom-right-radius: var(--s);
+  border-bottom-left-radius: var(--s);
 
   @include mobile-up {
-    padding: $m $lg;
+    padding: var(--m) var(--lg);
   }
 
   @include mobile-down {
-    padding: $m;
+    padding: var(--m);
   }
 }
 
 .createContainer {
   @include buttons-container;
 
-  padding: $m;
+  padding: var(--m);
 }
 
 .container {
@@ -52,7 +51,7 @@
 
 .infiniteApprove {
   @include mobile-down {
-    padding-bottom: $m;
+    padding-bottom: var(--m);
   }
 }
 
@@ -67,5 +66,5 @@
   display: flex;
   flex-direction: row;
   width: 100%;
-  gap: $m;
+  gap: var(--m);
 }
