--- a/src/features/acceptOffer/components/AcceptedOffer/AcceptedOffer.module.scss
+++ b/src/features/acceptOffer/components/AcceptedOffer/AcceptedOffer.module.scss
@@ -1,15 +1,13 @@
-@import '@common/variables.scss';
-
 .wrapper {
   width: 100%;
   display: flex;
-  padding: 84px $xl;
+  padding: 84px var(--xl);
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: $lg;
+  gap: var(--lg);
 
-  border-radius: 0 0 $s $s;
+  border-radius: 0 0 var(--s) var(--s);
   border-top: 2px solid #f5f5f5;
 }
 
@@ -20,7 +18,7 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  gap: $s;
+  gap: var(--s);
 }
 
 .label {
@@ -32,10 +30,10 @@
 .share {
   display: flex;
   flex-direction: row;
-  padding: $xxs $s;
+  padding: var(--xxs) var(--s);
   align-items: center;
-  gap: $s;
-  border-radius: $s;
+  gap: var(--s);
+  border-radius: var(--s);
   background: var(--bg-gray);
 }
 
@@ -50,7 +48,7 @@
   width: 100%;
   display: flex;
   height: 36px;
-  padding: 0 $m;
+  padding: 0 var(--m);
   justify-content: center;
   align-items: center;
 
@@ -58,6 +56,6 @@
   color: var(--base-white);
   font-weight: 600;
 
-  border-radius: $xxs;
+  border-radius: var(--xxs);
   background: var(--base-gray);
 }
