--- a/src/features/acceptOffer/components/ReceiverContainer/ReceiverContainer.module.scss
+++ b/src/features/acceptOffer/components/ReceiverContainer/ReceiverContainer.module.scss
@@ -1,4 +1,3 @@
-@import '@common/variables';
 @import '@common/typo.scss';
 @import '@common/breakpoints';
 
@@ -8,12 +7,12 @@
 
   @include mobile-up {
     align-items: center;
-    gap: $m;
+    gap: var(--m);
   }
 
   @include mobile-down {
     align-items: flex-start;
-    gap: $xxs;
+    gap: var(--xxs);
   }
 }
 
@@ -21,7 +20,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  gap: $xxs;
+  gap: var(--xxs);
 }
 
 .receiverAddress {
