--- a/src/features/acceptOffer/components/TokenEntity/TokenEntity.module.scss
+++ b/src/features/acceptOffer/components/TokenEntity/TokenEntity.module.scss
@@ -1,12 +1,10 @@
-@import '@common/colors';
-@import '@common/variables';
 @import '@common/breakpoints';
 
 .tokenWrapper {
   display: flex;
   flex-direction: row;
   align-items: center;
-  gap: $s;
+  gap: var(--s);
 }
 
 .logo {
@@ -25,7 +23,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  gap: $xxs;
+  gap: var(--xxs);
 }
 
 .tokenSum {
