--- a/src/features/acceptOffer/view.module.scss
+++ b/src/features/acceptOffer/view.module.scss
@@ -1,5 +1,3 @@
-@import '@common/colors.scss';
-@import '@common/variables.scss';
 @import '@common/breakpoints.scss';
 
 .container {
@@ -12,22 +10,22 @@
   border-bottom: 2px solid #f5f5f5;
 
   @include mobile-up {
-    gap: $lg;
-    padding: $xxl $lg;
+    gap: var(--lg);
+    padding: var(--xxl) var(--lg);
   }
 
   @include mobile-down {
-    gap: $m;
-    padding: $m;
+    gap: var(--m);
+    padding: var(--m);
   }
 }
 
 .paddingLg {
   @include mobile-up {
-    padding: $lg;
+    padding: var(--lg);
   }
 
   @include mobile-down {
-    padding: $m;
+    padding: var(--m);
   }
 }
