--- a/src/features/cancelOffer/CancelOffer.module.scss
+++ b/src/features/cancelOffer/CancelOffer.module.scss
@@ -1,4 +1,3 @@
-@import '@common/variables.scss';
 @import '@common/typo.scss';
 @import '@common/breakpoints.scss';
 
@@ -8,16 +7,16 @@
   align-items: flex-start;
   width: 100%;
   background: var(--base-white);
-  gap: $m;
-  border-bottom-right-radius: $s;
-  border-bottom-left-radius: $s;
+  gap: var(--m);
+  border-bottom-right-radius: var(--s);
+  border-bottom-left-radius: var(--s);
 
   @include mobile-up {
-    padding: $m $lg;
+    padding: var(--m) var(--lg);
   }
 
   @include mobile-down {
-    padding: $m;
+    padding: var(--m);
   }
 }
 
