--- a/src/features/createOffer/components/AddTokenPopup/AddTokenPopup.module.scss
+++ b/src/features/createOffer/components/AddTokenPopup/AddTokenPopup.module.scss
@@ -1,4 +1,3 @@
-@import '@common/variables.scss';
 @import '@common/typo.scss';
 @import '@common/mixins.scss';
 @import '@common/breakpoints.scss';
@@ -18,14 +17,14 @@
   max-width: 540px;
   min-height: 548px;
   background: var(--base-white);
-  padding: $m $lg;
+  padding: var(--m) var(--lg);
   border: none;
-  border-radius: $s;
+  border-radius: var(--s);
 
   @include mobile-down {
-    margin: $m;
+    margin: var(--m);
     justify-content: initial;
-    gap: $lg;
+    gap: var(--lg);
   }
 
   @include mobile-up {
@@ -38,7 +37,7 @@
 .content {
   display: flex;
   flex-direction: column;
-  gap: $lg;
+  gap: var(--lg);
 }
 
 .titleContainer {
@@ -70,17 +69,17 @@
 }
 
 .warning {
-  width: $xl;
+  width: var(--xl);
 }
 
 .warnContainer {
   display: flex;
   flex-direction: row;
   align-items: center;
-  padding: $m $s;
+  padding: var(--m) var(--s);
   background: var(--additional-warn);
-  border-radius: $s;
-  gap: $s;
+  border-radius: var(--s);
+  gap: var(--s);
 }
 
 .addressInput {
@@ -109,7 +108,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  gap: $lg;
+  gap: var(--lg);
 }
 
 .tokenWrapper {
@@ -123,14 +122,14 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  gap: $s;
+  gap: var(--s);
 }
 
 .balanceContainer {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  gap: $xxs;
+  gap: var(--xxs);
 }
 
 .tokenTitle {
