--- a/src/features/createOffer/components/OfferButtons/OfferButtons.module.scss
+++ b/src/features/createOffer/components/OfferButtons/OfferButtons.module.scss
@@ -1,4 +1,3 @@
-@import '@common/variables.scss';
 @import '@common/typo.scss';
 
 @mixin buttons-container {
@@ -6,17 +5,17 @@
   flex-direction: column;
   align-items: flex-start;
   width: 100%;
-  padding: $m $lg;
+  padding: var(--m) var(--lg);
   background: var(--base-white);
-  gap: $m;
-  border-bottom-right-radius: $s;
-  border-bottom-left-radius: $s;
+  gap: var(--m);
+  border-bottom-right-radius: var(--s);
+  border-bottom-left-radius: var(--s);
 }
 
 .createContainer {
   @include buttons-container;
 
-  padding: $m;
+  padding: var(--m);
 }
 
 .container {
@@ -53,5 +52,5 @@
   display: flex;
   flex-direction: row;
   width: 100%;
-  gap: $m;
+  gap: var(--m);
 }
