--- a/src/features/createOffer/components/Select/Select.module.scss
+++ b/src/features/createOffer/components/Select/Select.module.scss
@@ -1,5 +1,3 @@
-@import '@common/variables.scss';
-
 .wrapper {
   width: 100%;
 }
@@ -9,13 +7,13 @@
   justify-content: space-between;
   align-items: center;
   width: 100%;
-  height: $xxl;
-  padding: 0 $m;
+  height: var(--xxl);
+  padding: 0 var(--m);
   font-weight: 400;
   font-size: 16px;
   background: var(--base-white);
   border: 1px solid var(--base-black);
-  border-radius: $s;
+  border-radius: var(--s);
   cursor: pointer;
 }
 
@@ -23,13 +21,13 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  gap: $xxs;
+  gap: var(--xxs);
   width: 100%;
   padding: 0;
 }
 
 .item {
-  padding: $xs $m;
+  padding: var(--xs) var(--m);
 
   @include item-base;
 }
