--- a/src/features/createOffer/components/SelectTokenPopup/components/TokenItem/TokenItem.module.scss
+++ b/src/features/createOffer/components/SelectTokenPopup/components/TokenItem/TokenItem.module.scss
@@ -1,16 +1,15 @@
-@import '@common/variables.scss';
 @import '@common/typo.scss';
 
 .tokenItem {
   display: flex;
   flex-direction: row;
   align-items: center;
-  padding: $xxs $s;
+  padding: var(--xxs) var(--s);
   background: var(--bg-gray);
   border: 1px solid var(--additional-gray-pre-middle);
   border-radius: 100px;
   cursor: pointer;
-  gap: $xxs;
+  gap: var(--xxs);
   transition: all 100ms ease-in-out;
 
   &:hover {
