--- a/src/features/shareOffer/components/ShareOfferContainer/ShareOfferContainer.module.scss
+++ b/src/features/shareOffer/components/ShareOfferContainer/ShareOfferContainer.module.scss
@@ -1,4 +1,3 @@
-@import '@common/variables.scss';
 @import '@common/breakpoints.scss';
 
 .wrapper {
@@ -7,14 +6,14 @@
   align-items: flex-start;
   background: var(--base-white);
   border-radius: 10px;
-  gap: $s;
+  gap: var(--s);
 
   @include mobile-down {
-    padding: $m;
+    padding: var(--m);
   }
 
   @include mobile-up {
-    padding: $lg;
+    padding: var(--lg);
   }
 }
 
@@ -26,7 +25,7 @@
 
 .container {
   display: flex;
-  gap: 8px;
+  gap: var(--s);
 
   @include mobile-down {
     flex-direction: column;
