--- a/src/modules/CreateOfferTemplate/CreateOfferTemplate.module.scss
+++ b/src/modules/CreateOfferTemplate/CreateOfferTemplate.module.scss
@@ -1,5 +1,3 @@
-@import '@common/colors.scss';
-@import '@common/variables.scss';
 @import '@common/breakpoints.scss';
 
 .container {
@@ -7,10 +5,10 @@
   flex-direction: column;
   max-width: 724px;
   width: 100%;
-  gap: $lg;
+  gap: var(--lg);
 
   @include mobile-down {
-    padding: $m;
+    padding: var(--m);
   }
 
   @include mobile-up {
@@ -50,12 +48,12 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  gap: $xxs;
+  gap: var(--xxs);
 }
 
 .row {
   display: flex;
-  gap: $xxs;
+  gap: var(--xxs);
 
   @include mobile-down {
     flex-direction: column;
