--- a/src/shared/components/GasPrice/GasPrice.module.scss
+++ b/src/shared/components/GasPrice/GasPrice.module.scss
@@ -1,5 +1,3 @@
-@import '@common/variables.scss';
-
 .serviceContainer {
   display: flex;
   flex-direction: row;
@@ -17,7 +15,7 @@
 .feeContainer {
   display: flex;
   flex-direction: row;
-  gap: 4px;
+  gap: var(--xxs);
   align-items: center;
 }
 
