--- a/src/shared/components/NotConnectedMessage/NotConnectedMessage.module.scss
+++ b/src/shared/components/NotConnectedMessage/NotConnectedMessage.module.scss
@@ -1,4 +1,3 @@
-@import '@common/variables.scss';
 @import '@common/typo.scss';
 @import '@common/breakpoints.scss';
 
@@ -10,16 +9,16 @@
   border-top: 1px solid var(--additional-gray-pre-middle);
 
   @include mobile-up {
-    row-gap: $lg;
+    row-gap: var(--lg);
     margin-top: 24px;
-    padding: $xxl $lg 0;
+    padding: var(--xxl) var(--lg) 0;
 
     @include font-3xl;
   }
 
   @include mobile-down {
-    padding: $m;
-    row-gap: $lg;
+    padding: var(--m);
+    row-gap: var(--lg);
 
     @include font-xl;
   }
