--- a/src/shared/components/PopupToast/PopupToast.module.scss
+++ b/src/shared/components/PopupToast/PopupToast.module.scss
@@ -1,4 +1,3 @@
-@import '@common/variables.scss';
 @import '@common/typo.scss';
 @import '@common/breakpoints.scss';
 
@@ -14,17 +13,17 @@
   transition:
   top 0.5s ease,
   opacity 0.5s ease;
-  gap: $sm;
+  gap: var(--sm);
 
   @include mobile-up {
-    top: 32px;
+    top: var(--xl);
     max-width: 340px;
   }
 
   @include mobile-down {
     top: 113px;
     width: 100%;
-    padding: 0 $m;
+    padding: 0 var(--m);
   }
 }
 
@@ -34,9 +33,9 @@
   flex-direction: column;
   align-items: flex-start;
   width: 100%;
-  padding: $s;
-  border-radius: $xxs;
-  gap: $xxs;
+  padding: var(--s);
+  border-radius: var(--xxs);
+  gap: var(--xxs);
 }
 
 .success {
