--- a/src/shared/components/ProgressBar/ProgressBar.module.scss
+++ b/src/shared/components/ProgressBar/ProgressBar.module.scss
@@ -1,4 +1,3 @@
-@import '@common/variables.scss';
 @import '@common/typo.scss';
 
 @mixin active {
@@ -27,7 +26,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
-  gap: $xs;
+  gap: var(--xs);
   width: 100%;
 }
 
@@ -51,8 +50,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: $l;
-  height: $l;
+  width: var(--l);
+  height: var(--l);
   font-weight: 500;
   color: var(--additional-gray-pre-middle);
   background-color: var(--base-white);
