--- a/src/shared/ui-kit/Input/Input.module.scss
+++ b/src/shared/ui-kit/Input/Input.module.scss
@@ -1,4 +1,3 @@
-@import '@common/variables.scss';
 @import '@common/typo.scss';
 
 @mixin input-label {
@@ -10,7 +9,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  gap: $s;
+  gap: var(--s);
 }
 
 .label {
@@ -29,19 +28,19 @@
   --text-field-border-width: 0px;
 
   width: 100%;
-  height: $xxl;
-  padding: 0 $s;
+  height: var(--xxl);
+  padding: 0 var(--s);
   font-weight: 400;
   font-size: 24px;
-  line-height: $xxl;
+  line-height: var(--xxl);
   color: var(--additional-gray-dark);
   font-style: normal;
   border: 1px solid var(--base-gray);
-  border-radius: $xxs;
+  border-radius: var(--xxs);
   outline: none;
 
   & svg {
-    margin-right: 6px;
+    margin-right: var(--xs);
   }
 
   &::placeholder {
@@ -94,7 +93,7 @@
 }
 
 .sm {
-  height: 24px;
+  height: var(--lg);
 
   @include font-s-flat;
 }
@@ -106,9 +105,9 @@
 }
 
 .lg {
-  height: 48px;
+  height: var(--xxl);
   border: 1px solid var(--base-black);
-  border-radius: $s !important;
+  border-radius: var(--s) !important;
 
   @include font-3xl;
 }
