--- a/src/modules/CreateOfferTemplate/CreateOfferTemplate.module.scss
+++ b/src/modules/CreateOfferTemplate/CreateOfferTemplate.module.scss
@@ -1,4 +1,5 @@
 @import '@common/breakpoints.scss';
+@import '@common/typo.scss';
 
 .container {
   display: flex;
@@ -21,15 +22,12 @@
 }
 
 .title {
-  font-weight: 400;
-  line-height: normal;
-
   @include mobile-down {
-    font-size: 18px;
+    @include font-xl(400);
   }
 
   @include mobile-up {
-    font-size: 24px;
+    @include font-3xl(400);
   }
 }
 
