--- a/src/features/acceptOffer/components/RateContainer/RateContainer.module.scss
+++ b/src/features/acceptOffer/components/RateContainer/RateContainer.module.scss
@@ -1,7 +1,8 @@
+@import '@common/typo.scss';
+
 .rateContainer {
   display: flex;
   padding: var(--s);
-  gap: var(--xxs);
 
   flex-direction: column;
   justify-content: center;
@@ -15,13 +16,13 @@
 
 .rate {
   color: var(--base-black);
-  font-size: 24px;
-  font-weight: 400;
+
+  @include font-3xl(400);
 }
 
 .rateLabel {
   color: var(--base-black);
-  font-size: 14px;
-  font-weight: 400;
   opacity: 0.5;
+
+  @include font-m(400);
 }
