--- a/src/features/acceptOffer/components/ReceiverContainer/ReceiverContainer.module.scss
+++ b/src/features/acceptOffer/components/ReceiverContainer/ReceiverContainer.module.scss
@@ -1,5 +1,5 @@
-@import '@common/typo.scss';
 @import '@common/breakpoints';
+@import '@common/typo.scss';
 
 .arrowContainer {
   display: flex;
@@ -25,21 +25,19 @@
 
 .receiverAddress {
   color: var(--base-black);
-  font-weight: 400;
 
   @include mobile-up {
-    @include font-xl;
+    @include font-xl(400);
   }
 
   @include mobile-down {
-    @include font-xs;
+    @include font-xs(400);
   }
 }
 
 .receiver {
   color: var(--base-black);
-  font-weight: 400;
   opacity: 0.5;
 
-  @include font-m;
+  @include font-m(400);
 }
