--- a/src/features/createOffer/components/ProgressOfferBar/ProgressOfferBar.module.scss
+++ b/src/features/createOffer/components/ProgressOfferBar/ProgressOfferBar.module.scss
@@ -30,6 +30,8 @@
 }
 
 .step {
+  @include font-m(700);
+
   position: relative;
   z-index: 10;
   display: flex;
@@ -37,9 +39,6 @@
   align-items: center;
   width: 30px;
   height: 30px;
-  font-weight: 700;
-  font-size: 14px;
-  line-height: normal;
   color: var(--additional-gray-pre-middle);
   background-color: var(--base-white);
   border: 2px solid var(--additional-gray-pre-middle);
@@ -47,10 +46,7 @@
 }
 
 .label {
-  font-size: 14px;
-  line-height: normal;
-  font-style: normal;
-  font-weight: 400;
+  @include font-m(400);
 }
 
 .active .label,
