--- a/src/modules/CancelOfferTemplate/CancelOfferTemplate.module.scss
+++ b/src/modules/CancelOfferTemplate/CancelOfferTemplate.module.scss
@@ -1,4 +1,5 @@
 @import '@common/breakpoints.scss';
+@import '@common/typo.scss';
 
 .wrapper {
   @include mobile-down {
@@ -34,7 +35,7 @@
 }
 
 .label {
-  font-weight: 600;
-  font-size: 14px;
   color: var(--base-black);
+
+  @include font-m(600);
 }
