--- a/src/shared/components/NotConnectedMessage/NotConnectedMessage.module.scss
+++ b/src/shared/components/NotConnectedMessage/NotConnectedMessage.module.scss
@@ -1,5 +1,5 @@
-@import '@common/typo.scss';
 @import '@common/breakpoints.scss';
+@import '@common/typo.scss';
 
 .container {
   display: grid;
@@ -13,14 +13,14 @@
     margin-top: 24px;
     padding: var(--xxl) var(--lg) 0;
 
-    @include font-3xl;
+    @include font-3xl(400);
   }
 
   @include mobile-down {
     padding: var(--m);
     row-gap: var(--lg);
 
-    @include font-xl;
+    @include font-xl(400);
   }
 }
 
