--- a/src/shared/ui-kit/Checkbox/Checkbox.module.scss
+++ b/src/shared/ui-kit/Checkbox/Checkbox.module.scss
@@ -1,3 +1,5 @@
+@import '@common/typo.scss';
+
 .wrapper {
   display: flex;
   flex-direction: row;
@@ -42,10 +44,9 @@
 }
 
 .label {
-  font-weight: 400;
-  font-size: 14px;
-  line-height: normal;
   color: var(--base-black);
+
+  @include font-m(400);
 }
 
 [data-theme='dark'] {
