--- a/src/shared/ui-kit/Search/Search.module.scss
+++ b/src/shared/ui-kit/Search/Search.module.scss
@@ -1,3 +1,5 @@
+@import '@common/typo.scss';
+
 .asset {
   display: flex;
 }
@@ -36,12 +38,12 @@
   width: 100%;
   height: 36px;
   padding: 0 var(--s);
-  font-weight: 400;
   gap: var(--xxs);
-  font-size: 14px;
   color: var(--base-black);
   border: 1px solid var(--base-gray);
   border-radius: var(--xxs);
+
+  @include font-m(400);
 
   &:focus-within {
     padding: 0 7px;
