--- a/src/shared/components/ProgressBar/ProgressBar.module.scss
+++ b/src/shared/components/ProgressBar/ProgressBar.module.scss
@@ -58,7 +58,7 @@
   border: 2px solid var(--additional-gray-pre-middle);
   border-radius: 9999px;
 
-  @include font-s;
+  @include font-s(400);
 }
 
 .active .step {
