--- a/src/features/acceptOffer/components/AcceptedOffer/AcceptedOffer.module.scss
+++ b/src/features/acceptOffer/components/AcceptedOffer/AcceptedOffer.module.scss
@@ -49,7 +49,7 @@
   max-width: 144px;
   width: 100%;
   display: flex;
-  height: 36px;
+  height: var(--pxxl);
   padding: 0 var(--m);
   justify-content: center;
   align-items: center;
