--- a/src/shared/components/NotConnectedMessage/NotConnectedMessage.module.scss
+++ b/src/shared/components/NotConnectedMessage/NotConnectedMessage.module.scss
@@ -10,7 +10,7 @@
 
   @include mobile-up {
     row-gap: var(--lg);
-    margin-top: 24px;
+    margin-top: var(--lg);
     padding: var(--xxl) var(--lg) 0;
 
     @include font-3xl(400);
