--- a/src/shared/components/ThemeSwitcher/ThemeSwitcher.module.scss
+++ b/src/shared/components/ThemeSwitcher/ThemeSwitcher.module.scss
@@ -9,7 +9,7 @@
   display: flex;
   flex-direction: row;
   width: 80px;
-  height: 36px;
+  height: var(--pxxl);
   overflow: hidden;
   border-radius: var(--xxs);
   cursor: pointer;
