--- a/src/shared/ui-kit/Button/Button.module.scss
+++ b/src/shared/ui-kit/Button/Button.module.scss
@@ -5,7 +5,7 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 36px;
+  height: var(--pxxl);
   padding: 10px var(--m);
   color: var(--base-white);
   border: none;
