--- a/src/shared/ui-kit/Search/Search.module.scss
+++ b/src/shared/ui-kit/Search/Search.module.scss
@@ -36,7 +36,7 @@
   --text-field-border-width: 0px;
 
   width: 100%;
-  height: 36px;
+  height: var(--pxxl);
   padding: 0 var(--s);
   gap: var(--xxs);
   color: var(--base-black);
